# quiver

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
examples/: tools.example.json
scripts/: upload_github_images.py
src/quiver/: __init__.py  cli.py  completion.py  completion_scripts.py  console.py  help_text.py  mcp.py  mcp_formats.py  mcp_server.py  paths.py  prompt.py  table.py
src/quiver/harness/: __init__.py  catalog.py  commands.py  defaults.py  discover.py  discover_commands.py  path_health.py  rate_limits.py  registry.py  stars.py  tools.py
src/quiver/history/: __init__.py  parsers.py
src/quiver/mcp/: __init__.py  __main__.py  cli.py  codex_io.py  discover.py  discover_commands.py  formats.py  server.py
src/quiver/providers/: __init__.py  cli.py  commands.py  defaults.py  discover.py  help_text.py  keys.py  registry.py
src/quiver/sessions/: __init__.py  aggregator.py  commands.py  identity.py  models.py  models_analytics.py  parsers.py  usage.py
src/quiver/sessions/engines/: __init__.py  common.py  json_engine.py  jsonl_engine.py  sqlite_engine.py
src/quiver/setup/: __init__.py  commands.py
src/quiver/skills/: __init__.py  catalog_commands.py  catalog_discover.py  catalogs.py  commands.py  discovery.py  help_text.py  layout.py  layout_commands.py  link_ops.py  symlinks.py
tests/: README.md  test_completion.py  test_harness_commands.py  test_harness_discover.py  test_harness_edit.py  test_harness_registry.py  test_harness_stars.py  test_harness_tools.py  test_mcp_codex_io.py  test_mcp_commands.py  test_mcp_discover.py  test_mcp_formats.py  test_mcp_sync_integration.py  test_models_analytics.py  test_parse_droid.py  test_parse_new_harnesses.py  test_path_health.py  test_prompt.py  test_providers_commands.py  test_providers_discover.py  test_providers_keys.py  test_providers_registry.py  test_rate_limits.py  test_session_commands.py  test_session_engines.py  test_sessions_aggregator.py  test_sessions_commands.py  test_skills_catalogs.py  test_skills_commands.py  test_skills_discovery.py  test_skills_layout.py  test_skills_symlinks.py  test_table.py
