[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quiver"
version = "0.1.0"
description = "Central manager for AI coding CLI tools — one command to launch, resume, and analyze many AI coding agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "kaichen" }]
keywords = ["ai", "cli", "coding-agents", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
# `mcp_server.py` exposes session history as a FastMCP server; only needed if
# you run `python -m quiver.mcp_server`. The core `swe` CLI is stdlib-only.
server = ["mcp>=1.0.0"]

[project.scripts]
swe = "quiver.cli:main"

[project.urls]
Homepage = "https://github.com/kaichen/quiver"
Repository = "https://github.com/kaichen/quiver"
Issues = "https://github.com/kaichen/quiver/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quiver"]
