[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quiver"
version = "0.2.2"
description = "Central manager for AI coding CLI tools — one command to launch, resume, and analyze many AI coding agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "kaichen", email = "c-wenlong@users.noreply.github.com" }]
keywords = ["ai", "cli", "coding-agents", "llm", "developer-tools", "mcp", "claude", "codex", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
# `mcp_server.py` exposes session history as a FastMCP server; only needed if
# you run `python -m quiver.mcp_server`. The core `swe` CLI is stdlib-only.
server = ["mcp>=1.0.0"]

[project.scripts]
swe = "quiver.cli:main"

[project.urls]
Homepage = "https://github.com/c-wenlong/quiver"
Documentation = "https://github.com/c-wenlong/quiver#readme"
Repository = "https://github.com/c-wenlong/quiver"
Issues = "https://github.com/c-wenlong/quiver/issues"
Changelog = "https://github.com/c-wenlong/quiver/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/quiver"]
